--- a/EPFCALCULATOR.html
+++ b/EPFCALCULATOR.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>EPF Calculator</title>
+  <title>EPF + EPS Calculator</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -13,11 +13,14 @@
       overflow-y: auto;
       margin-top: 30px;
     }
+    .summary-box {
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2 class="mb-4">EPF Calculator</h2>
+    <h2 class="mb-4">EPF + EPS Pension Calculator</h2>
 
     <form id="epfForm" class="row g-3">
       <div class="col-md-4">
@@ -52,6 +55,13 @@
         <tbody></tbody>
       </table>
     </div>
+
+    <div class="summary-box">
+      <h4>Summary</h4>
+      <ul class="list-group" id="summaryList">
+        <!-- Summary will be populated here -->
+      </ul>
+    </div>
   </div>
 
   <script>
@@ -67,6 +77,7 @@
       const tbody = document.querySelector('#resultTable tbody');
       tbody.innerHTML = '';
 
+      const epsList = []; // Store EPS contributions for last 5 years
       let balance = 0;
       let interestAccrued = 0;
       let basic = basicInput;
@@ -74,20 +85,24 @@
       for (let y = 1; y <= years; y++) {
         for (let m = 1; m <= 12; m++) {
           const emp = basic * 0.12;
-          const employer = basic * 0.0367;
-          const monthlyContribution = emp + employer;
+          const employerEPF = basic * 0.0367;
+          const employerEPS = basic * 0.0833;
+          const monthlyContribution = emp + employerEPF;
 
           // Interest is only on previous balance
           const interest = balance * monthlyRate;
           interestAccrued += interest;
-          balance += emp + employer + interest;
+          balance += emp + employerEPF + interest;
+
+          // Track EPS for pension calculation
+          if (y > years - 5) epsList.push(Math.min(basic, 15000));
 
           const row = document.createElement('tr');
           row.innerHTML = `
             <td>${y}-${m.toString().padStart(2, '0')}</td>
             <td>₹${basic.toFixed(2)}</td>
             <td>₹${emp.toFixed(2)}</td>
-            <td>₹${employer.toFixed(2)}</td>
+            <td>₹${employerEPF.toFixed(2)}</td>
             <td>₹${interest.toFixed(2)}</td>
             <td>₹${balance.toFixed(2)}</td>
           `;
@@ -95,6 +110,22 @@
         }
         basic += basic * (stepUp / 100); // Apply annual step-up
       }
+
+      // EPS Calculation
+      const avgLast5YearsBasic = epsList.reduce((a, b) => a + b, 0) / epsList.length;
+      const pensionableSalary = Math.min(avgLast5YearsBasic, 15000);
+      const pensionableService = Math.floor(years); // Only whole years count
+      const monthlyPension = (pensionableSalary * pensionableService) / 70;
+
+      // Summary
+      const summaryList = document.getElementById('summaryList');
+      summaryList.innerHTML = `
+        <li class="list-group-item">Total EPF Corpus (Employee + Employer + Interest): <strong>₹${balance.toFixed(2)}</strong></li>
+        <li class="list-group-item">Average Basic Pay (Last 5 Years): <strong>₹${avgLast5YearsBasic.toFixed(2)}</strong></li>
+        <li class="list-group-item">Pensionable Salary (Max ₹15,000): <strong>₹${pensionableSalary.toFixed(2)}</strong></li>
+        <li class="list-group-item">Total Years of Service: <strong>${pensionableService} years</strong></li>
+        <li class="list-group-item">Estimated Monthly Pension (EPS): <strong>₹${monthlyPension.toFixed(2)}</strong></li>
+      `;
     });
   </script>
 </body>
