--- a/STEPUPINTERESTCALCULATOR.html
+++ b/STEPUPINTERESTCALCULATOR.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Step-Up RD/SIP Calculator</title>
+  <title>Step-Up Interest Calculator</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <style>
     body { padding: 2rem; background-color: #f9f9f9; }
