--- a/NPSCALCULATOR.html
+++ b/NPSCALCULATOR.html
@@ -12,6 +12,26 @@
   </style>
 </head>
 <body>
+
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">🧮 Financial Suite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="stepup-calculator.html">Step-Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="stepup-interest.html">Step-Up RD/SIP</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="nps-calculator.html">Step-Up NPS</a></li>
+          <li class="nav-item"><a class="nav-link" href="epf-eps-calculator.html">EPF + EPS</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
   <div class="container">
     <h2 class="mb-4 text-center">Step-Up NPS Calculator</h2>
     
@@ -53,6 +73,12 @@
     <div id="summary" class="mt-4"></div>
   </div>
 
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    Simple Web Project
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.getElementById('npsForm').addEventListener('submit', function (e) {
       e.preventDefault();
@@ -109,7 +135,6 @@
       tableHTML += '</tbody></table>';
       document.getElementById('result').innerHTML = tableHTML;
 
-      // Maturity calculation with monthly compounding
       const monthlyRate = roi / 100 / 12;
       let maturityAmount = 0;
 
@@ -119,8 +144,6 @@
       });
 
       let totalInterest = maturityAmount - cumulativeInvestment;
-
-      // NPS corpus breakdown
       const annuityAmount = (annuityPercent / 100) * maturityAmount;
       const lumpSum = maturityAmount - annuityAmount;
       const monthlyPension = (annuityAmount * (annuityRate / 100)) / 12;
