--- a/index.html
+++ b/index.html
@@ -19,10 +19,29 @@
   </style>
 </head>
 <body>
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">🧮 Financial Suite</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="stepup-calculator.html">Step-Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="stepup-interest.html">Step-Up RD/SIP</a></li>
+          <li class="nav-item"><a class="nav-link" href="nps-calculator.html">Step-Up NPS</a></li>
+          <li class="nav-item"><a class="nav-link" href="epf-eps-calculator.html">EPF + EPS</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Content -->
   <div class="container text-center">
     <h1 class="mb-5">📊 Financial Calculators</h1>
     <div class="row g-4">
-      
+
       <div class="col-md-6 col-lg-3">
         <a href="stepup-calculator.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-primary">
@@ -61,5 +80,11 @@
 
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    Simple Web Project
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
