made it into one single application

--- a/EPFCALCULATOR.html
+++ b/EPFCALCULATOR.html
@@ -30,10 +30,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="stepup-calculator.html">Step-Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="stepup-interest.html">Step-Up RD/SIP</a></li>
-          <li class="nav-item"><a class="nav-link" href="nps-calculator.html">Step-Up NPS</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="epf-eps-calculator.html">EPF + EPS</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="./STEPUPCALCULATOR.html">Step-Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="./STEPUPINTERESTCALCULATOR.html">Step-Up RD/SIP</a></li>
+          <li class="nav-item"><a class="nav-link" href="./NPSCALCULATOR.html">Step-Up NPS</a></li>
+          <li class="nav-item"><a class="nav-link active"  href="./EPFCALCULATOR.html">EPF + EPS</a></li>
         </ul>
       </div>
     </div>
