--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="stepup-calculator.html">Step-Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="stepup-interest.html">Step-Up RD/SIP</a></li>
-          <li class="nav-item"><a class="nav-link" href="nps-calculator.html">Step-Up NPS</a></li>
-          <li class="nav-item"><a class="nav-link" href="epf-eps-calculator.html">EPF + EPS</a></li>
+            <li class="nav-item"><a class="nav-link" aria-current="page" href="./STEPUPCALCULATOR.html">Step-Up</a></li>
+            <li class="nav-item"><a class="nav-link" href="./STEPUPINTERESTCALCULATOR.html">Step-Up RD/SIP</a></li>
+            <li class="nav-item"><a class="nav-link" href="./NPSCALCULATOR.html">Step-Up NPS</a></li>
+            <li class="nav-item"><a class="nav-link"  href="./EPFCALCULATOR.html">EPF + EPS</a></li>
         </ul>
       </div>
     </div>
@@ -43,7 +43,7 @@
     <div class="row g-4">
 
       <div class="col-md-6 col-lg-3">
-        <a href="stepup-calculator.html" class="text-decoration-none">
+        <a href="./STEPUPCALCULATOR.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-primary">
             <h5 class="text-primary">Step-Up Investment</h5>
             <p>View your monthly investment growth with step-ups over time.</p>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="col-md-6 col-lg-3">
-        <a href="stepup-interest.html" class="text-decoration-none">
+        <a href="./STEPUPINTERESTCALCULATOR.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-success">
             <h5 class="text-success">Step-Up + Interest (RD/SIP)</h5>
             <p>Get maturity value and interest for RD/SIP-style step-up investing.</p>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="col-md-6 col-lg-3">
-        <a href="nps-calculator.html" class="text-decoration-none">
+        <a href="./NPSCALCULATOR.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-warning">
             <h5 class="text-warning">Step-Up NPS</h5>
             <p>Simulate long-term NPS growth, annuity split, and pension estimates.</p>
@@ -70,7 +70,7 @@
       </div>
 
       <div class="col-md-6 col-lg-3">
-        <a href="epf-eps-calculator.html" class="text-decoration-none">
+        <a href="./EPFCALCULATOR.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-danger">
             <h5 class="text-danger">EPF + EPS Pension</h5>
             <p>Track EPF balance, employer contribution, and EPS pension benefits.</p>
