--- a/NPSCALCULATOR.html
+++ b/NPSCALCULATOR.html
@@ -22,10 +22,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="stepup-calculator.html">Step-Up</a></li>
-          <li class="nav-item"><a class="nav-link" href="stepup-interest.html">Step-Up RD/SIP</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="nps-calculator.html">Step-Up NPS</a></li>
-          <li class="nav-item"><a class="nav-link" href="epf-eps-calculator.html">EPF + EPS</a></li>
+          <li class="nav-item"><a class="nav-link " aria-current="page" href="./STEPUPCALCULATOR.html">Step-Up</a></li>
+          <li class="nav-item"><a class="nav-link" href="./STEPUPINTERESTCALCULATOR.html">Step-Up RD/SIP</a></li>
+          <li class="nav-item"><a class="nav-link active" href="./NPSCALCULATOR.html">Step-Up NPS</a></li>
+          <li class="nav-item"><a class="nav-link" href="./EPFCALCULATOR.html">EPF + EPS</a></li>
         </ul>
       </div>
     </div>
