--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Financial Calculators Suite</title>
+  <!-- Styles -->
+  <link rel="stylesheet" href="styles.css">
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: #f5f8fa;
-      padding: 40px;
-    }
-    .card {
-      transition: all 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-    }
-  </style>
 </head>
-<body>
+
+<body class="d-flex flex-column min-vh-100">
+
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">🧮 Financial Suite</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -28,22 +23,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" aria-current="page" href="./STEPUPCALCULATOR.html">Step-Up</a></li>
-            <li class="nav-item"><a class="nav-link" href="./STEPUPINTERESTCALCULATOR.html">Step-Up RD/SIP</a></li>
-            <li class="nav-item"><a class="nav-link" href="./NPSCALCULATOR.html">Step-Up NPS</a></li>
-            <li class="nav-item"><a class="nav-link"  href="./EPFCALCULATOR.html">EPF + EPS</a></li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="./STEPUPCALCULATOR.html">Step-Up</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
   <!-- Main Content -->
-  <div class="container text-center">
+  <main class="container text-center my-5">
     <h1 class="mb-5">📊 Financial Calculators</h1>
     <div class="row g-4">
 
       <div class="col-md-6 col-lg-3">
-        <a href="./STEPUPCALCULATOR.html" class="text-decoration-none">
+        <a href="./components/stepUpCalculator.html" class="text-decoration-none">
           <div class="card p-4 h-100 border-primary">
             <h5 class="text-primary">Step-Up Investment</h5>
             <p>View your monthly investment growth with step-ups over time.</p>
@@ -51,40 +43,17 @@
         </a>
       </div>
 
-      <div class="col-md-6 col-lg-3">
-        <a href="./STEPUPINTERESTCALCULATOR.html" class="text-decoration-none">
-          <div class="card p-4 h-100 border-success">
-            <h5 class="text-success">Step-Up + Interest (RD/SIP)</h5>
-            <p>Get maturity value and interest for RD/SIP-style step-up investing.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-6 col-lg-3">
-        <a href="./NPSCALCULATOR.html" class="text-decoration-none">
-          <div class="card p-4 h-100 border-warning">
-            <h5 class="text-warning">Step-Up NPS</h5>
-            <p>Simulate long-term NPS growth, annuity split, and pension estimates.</p>
-          </div>
-        </a>
-      </div>
-
-      <div class="col-md-6 col-lg-3">
-        <a href="./EPFCALCULATOR.html" class="text-decoration-none">
-          <div class="card p-4 h-100 border-danger">
-            <h5 class="text-danger">EPF + EPS Pension</h5>
-            <p>Track EPF balance, employer contribution, and EPS pension benefits.</p>
-          </div>
-        </a>
-      </div>
-
     </div>
-  </div>
+  </main>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3 mt-5">
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
     Simple Web Project
   </footer>
+
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
